Updated formatting of Python files.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "python.pythonPath": "/home/imran/anaconda3/bin/python",
-    "python.linting.enabled": false
+    "python.linting.enabled": false,
+    "restructuredtext.confPath": "${workspaceFolder}/source"
 }
