Moved config files into their own directories. Removed start up script since it should be in the installation repo now.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "python.pythonPath": "/home/imran/anaconda3/bin/python",
-    "python.linting.enabled": false,
-    "restructuredtext.confPath": "${workspaceFolder}/source"
+    "python.linting.enabled": true,
+    "restructuredtext.confPath": "${workspaceFolder}/source",
+    "python.linting.flake8Enabled": true
 }
