--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
-    "python.pythonPath": "/home/imran/anaconda3/bin/python",
-    "python.linting.enabled": true,
+    "python.pythonPath": "/usr/local/bin/python3",
+    "python.linting.enabled": false,
     "restructuredtext.confPath": "${workspaceFolder}/source",
     "python.linting.flake8Enabled": true
 }
